test/negative/invariant4.mli.expected

*******************************
********** Parsed file ********
*******************************
type 'a t = private {
  a: 'a }[@@gospel {| with self
    invariant self.a = 42 |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Stdlib *)

(*@ open Gospelstdlib *)

type 'a t = private {
a: 'a }
  (*@ invariant ...
       *)
File "invariant4.mli", line 3, characters 14-20:
Error: This term has type `'a' but a term was expected of type `integer'.
